
classDiagram
    class Game {
        -width: int
        -height: int
        -snake: Snake
        -food: Food
        +__init__(width: int, height: int)
        +run() None
        +check_collision() bool
        +place_food() None
    }
    class Snake {
        -segments: list[tuple[int, int]]
        -direction: tuple[int, int]
        +__init__(start_pos: tuple[int, int], start_direction: tuple[int, int])
        +move(direction: tuple[int, int]) None
        +grow() None
    }
    class Food {
        -position: tuple[int, int]
        +__init__() None
        +randomize_position(snake_segments: list[tuple[int, int]]) None
    }
    Game --> Snake
    Game --> Food
